[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theia"
version = "0.1.0"
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.1.0",
    "torchaudio>=0.13.1",
    "torchvision>=0.16.0",
    "tensorflow==2.15.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rich>=13.4.2",
    "wandb",
    "transformers",
    "einops",
    "webdataset@git+https://github.com/elicassion/webdataset.git@elicassion/fix_shuffle_bug",
    "opencv-python==4.8.0.74",
    "av",
    "seaborn",
    "matplotlib",
    "datasets",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]